gl51-master/src/test/deca/context/invalid/test_while.deca
// Description

{
   // while(!2) {}
   while(-true){}
}